add jdk 25 optimizations