@@ -22,23 +22,20 @@
         <assertj.version>3.24.2</assertj.version>
         <fastutil.version>8.5.12</fastutil.version>
         <roaringbitmap.version>1.3.0</roaringbitmap.version>
+        <jol.version>0.17</jol.version>
     </properties>
 
     <dependencies>
-        <!-- JSON Processing -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.19.0</version>
         </dependency>
-
-        <!-- High-Performance Collections -->
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
@@ -49,15 +46,12 @@
             <artifactId>RoaringBitmap</artifactId>
             <version>${roaringbitmap.version}</version>
         </dependency>
-
-<!--        cache-->
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.24.3</version>
             <optional>true</optional>
         </dependency>
-        <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -68,6 +62,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>${jol.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -84,23 +84,22 @@
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                         <arg>-parameters</arg>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
                     <argLine>
-                        -XX:+UseZGC
-                        -Xms512m
-                        -Xmx2g
+                        --add-modules=jdk.incubator.vector
+                        -Djol.magicFieldOffset=true
+                        -XX:+UseZGC -Xms512m -Xmx2g
                     </argLine>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -115,7 +114,6 @@
                     <finalName>rule-engine-${project.version}</finalName>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -131,5 +129,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
